--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
 	<servlet>
 		<servlet-name>Wedding919</servlet-name>
 		<servlet-class>idv.chonhan.Wedding919Servlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Wedding919</servlet-name>
-		<url-pattern>/wedding919</url-pattern>
+		<url-pattern>/apply</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>error500</servlet-name>
+		<jsp-file>index.html</jsp-file>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>error500</servlet-name>
+		<url-pattern>/error500</url-pattern>
+	</servlet-mapping>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error500</location>
+	</error-page>
+	
+		<error-page>
+		<error-code>404</error-code>
+		<location>/error500</location>
+	</error-page>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
