--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,33 +5,34 @@
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 	<servlet>
-		<servlet-name>Wedding919</servlet-name>
-		<servlet-class>idv.chonhan.Wedding919Servlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Wedding919</servlet-name>
-		<url-pattern>/apply</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>error500</servlet-name>
+		<servlet-name>welcome</servlet-name>
 		<jsp-file>index.html</jsp-file>
+	</servlet>
+	<servlet>
+		<servlet-name>register</servlet-name>
+		<jsp-file>register.html</jsp-file>
 	</servlet>
 
 	<servlet-mapping>
-		<servlet-name>error500</servlet-name>
-		<url-pattern>/error500</url-pattern>
+		<servlet-name>welcome</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>register</servlet-name>
+		<url-pattern>/apply</url-pattern>
 	</servlet-mapping>
 
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error500</location>
+		<location>/</location>
 	</error-page>
-	
-		<error-page>
+
+	<error-page>
 		<error-code>404</error-code>
-		<location>/error500</location>
+		<location>/</location>
 	</error-page>
-	
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
